--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     <meta name="description"
           content="This is a music app made in react. It is the one stop music destination you wished for.">
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <meta name="theme-color" content="#000000"/>
 
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Pacifico&display=swap" rel="stylesheet">
 
-    <title>Vusic | The music destination you want.</title>
+    <title>MUSICON</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
